...
        android:paddingBottom="10dp"
        android:progressTint="@color/colorGoled"
        android:rating="0"
        android:stepSize="1" />

    <EditText
        android:id="@+id/writerreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Enter Your Review here"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/savereview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_rounded_corners_brownish"
        android:onClick="sendReview"
        android:paddingLeft="9dp"
...
