<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.edit_Password.password">
    <ProgressBar
        android:id="@+id/Password_progressBar"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/Password_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:paddingTop="30dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSilver"
                ></View>
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorCream"></View>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorSilver"></View>
            <RelativeLayout
                android:id="@+id/Password_relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/Password_CurrentPass_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Current Password"
                    android:textStyle="bold"
                    android:paddingBottom="15dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
               <EditText
                    android:id="@+id/Password_CurrentPass_EditTex"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:background="@color/colorSilver"
                   android:hint="Current password"
                    style="@style/EditTextStyle"
                   android:inputType="textPassword"
                   android:maxLines="1"
                   android:layout_below="@id/Password_CurrentPass_textview"></EditText>


            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorSilver"></View>
            <RelativeLayout
                android:id="@+id/Password_newPassword_relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/Password_newPassword_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New password"
                    android:textStyle="bold"
                    android:paddingBottom="15dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                         <EditText
                    android:id="@+id/Password_newPassword_editText"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:background="@color/colorSilver"
                    android:hint="New Password"
                    style="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_below="@id/Password_newPassword_textview"></EditText>
                <EditText
                    android:id="@+id/Password_confirmPassword_editText"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:background="@color/colorSilver"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    style="@style/EditTextStyle"
                    android:layout_below="@id/Password_newPassword_editText"></EditText>

                <Button
                    android:id="@+id/Password_savePassword_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Password_confirmPassword_editText"
                    android:text="save"
                    style="@style/Button"
                    android:background="@drawable/button_rounded_corners_brownish"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:id="@+id/Password_errorMessage_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/Password_newPassword_editText"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/red"
                    android:visibility="invisible"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>