<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/Main_toolbarr"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/brown"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/whenfindreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/reviewerimage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:src="@drawable/profileicon"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                tools:src="@drawable/profileicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reviwernametxtui"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Name"
                        android:textColor="@color/colorGreen"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/constratedit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:paddingLeft="4dp"
                        android:text="rated it" />

                    <RatingBar
                        android:id="@+id/ratingui"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:paddingLeft="6dp"
                        android:paddingTop="3dp"
                        android:stepSize="0.1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/dateofreviewtxtui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Dateofreview" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bookimage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="0"
                app:srcCompat="@drawable/bookcover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical"
                android:paddingLeft="30dp">

                <TextView
                    android:id="@+id/booktitleui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Book Title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authornameui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionreviewui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descreption"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/likereviewtxtui"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="makeReviewLike"
                android:paddingLeft="24dp"
                android:text="like"
                android:textColor="@color/colorGreen" />

            <TextView
                android:id="@+id/commentreviewtxtui"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="comment"
                android:textColor="@color/colorGreen" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackgroundWhite"
                app:srcCompat="@drawable/likeicon" />

            <TextView
                android:id="@+id/numberoflikesreviewtxtui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorGreen" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorBackgroundWhite"
                app:srcCompat="@drawable/commenticon" />

            <TextView
                android:id="@+id/numberofcommentreviewtxtui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorGreen" />
        </LinearLayout>

        <TextView
            android:id="@+id/bookdesctxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:text="COMMENT SECTION"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/reviewlist"
            android:paddingBottom="3dp" />

        <TextView
            android:id="@+id/noreviewtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="gone" />

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swiperefreshcomment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <ListView
                android:id="@+id/commentlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/Addcomentlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/writercomment"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="Write a comment" />

            <ImageView
                android:id="@+id/sendcommentbtn"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="sendcomment"
                app:srcCompat="@drawable/sendreview" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Whennoreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/readholicloh" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            tools:text="Nothing Found" />

    </LinearLayout>
</LinearLayout>